--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,21 @@
             </div><!-- Logo -->
 
             <nav class="menu-desktop">
-                
-            </nav>
+                <ul>
+                    <li>
+                        <a href="#">Início</a>
+                        <a href="#">Especialidades</a>
+                        <a href="#">Sobre</a>
+                        <a href="#">Projetos</a>
+                    </li>
+                </ul>
+            </nav><!-- Menu Navegação -->
+
+            <div class="btn-contato">
+                <a href="#">
+                    <button>Contato</button>
+                </a>
+            </div><!-- Botão Contato -->
 
         </div> <!-- Interface -->
     </header>
