--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="" alt="">
+                    <img src="" alt="logo">
                 </a>
             </div><!-- Logo -->
 
@@ -47,5 +47,29 @@
 
         </div> <!-- Interface -->
     </header>
+
+    <main>
+        <section class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL.</h1>
+                        <p>Creatividade e inivação andam de lado a lado. Com uma combinação única de design impactante, funcionalidade intuitiva e otmização para resultados, pronto para criar a presença online dos seus sonhos!
+                        </p>
+
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Entre em contato</button>
+                            </a>
+                        </div>
+                    </div><!--txt-topo-site-->
+
+                    <div class="img-topo-site">
+                        <img src="../_img/Foto_jose02.jpg" alt="Perfil">
+                    </div><!--img-topo-site-->
+                </div><!--flex-->
+            </div><!-- Interface -->
+        </section><!-- topo-do-site -->
+    </main>
 </body>
 </html>
