--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- fim fontes google -->
-     
+
+    <!--Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--Fim Bootstrap icons -->
+
     <link rel="stylesheet" href="../css/style.css">
     <title>JCod-Desk</title>
 </head>
@@ -70,6 +74,31 @@
                 </div><!--flex-->
             </div><!-- Interface -->
         </section><!-- topo-do-site -->
+
+        <section class="especialidades">
+            <div class="interface">
+                <h2>MINHAS <span>ESPECIALIDADES</span></h2>
+                <div class="flex">
+                    <div class="especialidades-box">
+                        <i class="bi bi-code-square"></i>
+                        <h3>Website</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quasi aperiam sed accusantium aspernatur dolorem labore fugit doloremque.!</p>
+                    </div><!-- especialidades-box -->
+
+                    <div class="especialidades-box">
+                        <i class="bi bi-cart3"></i>
+                        <h3>Loja online</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quasi aperiam sed accusantium aspernatur dolorem labore fugit doloremque.</p>
+                    </div><!-- especialidades-box -->
+
+                    <div class="especialidades-box">
+                        <i class="bi bi-wordpress"></i>
+                        <h3>WordPress</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quasi aperiam sed accusantium aspernatur dolorem labore fugit doloremque.</p>
+                    </div>
+                </div><!-- flex -->
+            </div><!-- Interface -->
+        </section><!-- Especialidades -->
     </main>
 </body>
 </html>
