--- a/html/index.html
+++ b/html/index.html
@@ -77,7 +77,7 @@
 
         <section class="especialidades">
             <div class="interface">
-                <h2>MINHAS <span>ESPECIALIDADES</span></h2>
+                <h2 class="titulo">MINHAS <span>ESPECIALIDADES</span></h2>
                 <div class="flex">
                     <div class="especialidades-box">
                         <i class="bi bi-code-square"></i>
@@ -99,6 +99,10 @@
                 </div><!-- flex -->
             </div><!-- Interface -->
         </section><!-- Especialidades -->
+
+        <section>
+            
+        </section>
     </main>
 </body>
 </html>
